--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
                     <div class="link-description"></div>
                 </a>
             </li>
+
+            <li>
+                <a href="https://github.com/gesoges0">
+                    <div class="link-title">GitHub</div>
+                    <div class="link-description"></div>
+                </a>
+            </li>
         </ul>
     </div>
 </body>
